[gd_scene load_steps=12 format=3 uid="uid://cyj2ouxab48p7"]

[ext_resource type="Script" path="res://scene/item/explosives.gd" id="1_rxnfd"]
[ext_resource type="Texture2D" uid="uid://dqvmneppxg0o3" path="res://assets/environment/scifi/anims/confettitestparticle.png" id="3_vwy0j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x2s5f"]
size = Vector2(64, 67)

[sub_resource type="Animation" id="Animation_hjff3"]
length = 0.6
loop_mode = 1

[sub_resource type="Animation" id="Animation_piy51"]
resource_name = "blue_balloo"
length = 6.0
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wl4ny"]
_data = {
"RESET": SubResource("Animation_hjff3"),
"blue_balloon": SubResource("Animation_piy51")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_b5qps"]

[sub_resource type="Gradient" id="Gradient_fpwm6"]
offsets = PackedFloat32Array(0, 0.338384, 0.621212, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.737437, 0.159362, 1.92523e-07, 1, 0.824561, 0.549079, 0.00772229, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8tbb3"]
gradient = SubResource("Gradient_fpwm6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lq2av"]
lifetime_randomness = 0.03
particle_flag_disable_z = true
direction = Vector3(1, 1, 0)
spread = 180.0
gravity = Vector3(0, 5, 0)
initial_velocity_min = 5.0
initial_velocity_max = 75.0
angular_velocity_min = 15.0
angular_velocity_max = 20.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color_ramp = SubResource("GradientTexture1D_8tbb3")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryb26"]
size = Vector2(64, 66)

[node name="mine" type="CharacterBody2D"]
position = Vector2(0, 15)
scale = Vector2(0.5, 0.5)
collision_layer = 0
script = ExtResource("1_rxnfd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -24.5)
shape = SubResource("RectangleShape2D_x2s5f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wl4ny")
}

[node name="pop_damage" type="Area2D" parent="."]
visible = false
collision_mask = 193
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="pop_damage"]
scale = Vector2(7.2979, 6.57288)
shape = SubResource("CircleShape2D_b5qps")

[node name="confetti" type="GPUParticles2D" parent="."]
emitting = false
amount = 250
process_material = SubResource("ParticleProcessMaterial_lq2av")
texture = ExtResource("3_vwy0j")
lifetime = 1.3
one_shot = true
speed_scale = 2.0
explosiveness = 0.2
randomness = 0.85

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 193

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, -25)
shape = SubResource("RectangleShape2D_ryb26")

[connection signal="body_entered" from="pop_damage" to="." method="_on_pop_damage_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
